[package]

name = "number_words"
version = "0.0.4"
authors = ["Franklin Chen <franklinchen@franklinchen.com>"]
description = "Parse a number into possible words"
documentation = "http://rust-ci.org/FranklinChen/number-words-rust/doc/number_words/"
homepage = "https://github.com/FranklinChen/number-words-rust"
repository = "https://github.com/FranklinChen/number-words-rust"
readme = "README.md"
keywords = ["game", "parsing"]
license = "MIT OR Apache-2.0"
